# myshop

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  urls.py
cart/: cart.py  context_processors.py  forms.py  urls.py  views.py
cart/templates/cart/: detail.html  details.html
coupons/: admin.py  forms.py  models.py  views.py
coupons/migrations/: 0001_initial.py
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
myshop/: settings.py  urls.py
orders/: admin.py  models.py  urls.py  views.py
orders/locale/en/LC_MESSAGES/: django.po
orders/locale/es/LC_MESSAGES/: django.po
orders/migrations/: 0001_initial.py  0002_orderitem_braintree_id.py  0003_auto_20200908_0257.py  0004_auto_20201216_2046.py
orders/templates/admin/orders/order/: detail.html
orders/templates/orders/order/: create.html  created.html  pdf.html
payment/: tasks.py  urls.py  views.py
payment/templates/payment/: canceled.html  done.html  process.html
shop/: admin.py  models.py  views.py
shop/migrations/: 0001_initial.py
shop/templates/shop/: base.html
shop/templates/shop/product/: detail.html  list.html
static/admin/css/: base.css
staticfiles/: staticfiles.json
staticfiles/admin/css/: base.75b9c12a75c2.css
staticfiles/css/: pdf.63e9cecea771.css
