[tool.poetry]
name = "myshop"
version = "0.1.0"
description = "A fully featured online shop."
authors = ["jay <johnjohnsonokah@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
celery = "4.4.2"
cloudinary = "1.22.0"
Django = "3.0.*"
django-environ = "0.4.5"
django-heroku = "0.3.1"
flower = "0.9.3"
gunicorn = "20.0.4"
Pillow = "7.0.*"
psycopg2-binary = "2.8.5"
python-decouple = "3.3"
redis = "3.4.1"
braintree = "^4.5.0"
dj3-cloudinary-storage = "^0.0.3"
WeasyPrint = "^52.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
